--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^9.6.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-cssfx-loading": "^1.0.3",
     "react-dom": "^17.0.2",
+    "react-modal-image": "^2.5.0",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
