--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-cssfx-loading": "^1.0.3",
     "react-dom": "^17.0.2",
+    "react-input-emoji": "^4.0.9",
     "react-modal-image": "^2.5.0",
     "react-moment": "^1.1.1",
     "react-router-dom": "^6.1.1",
