--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.6.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chat-elements": "^10.16.0",
     "react-cssfx-loading": "^1.0.3",
     "react-dom": "^17.0.2",
     "react-input-emoji": "^4.0.9",
