--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-input-emoji": "^4.0.9",
     "react-modal-image": "^2.5.0",
     "react-moment": "^1.1.1",
+    "react-player": "^2.9.0",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "video-react": "^0.14.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
