--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@virgilsecurity/e3kit-browser": "^2.4.5",
+    "crypto-js": "^4.1.1",
     "firebase": "^9.6.1",
     "moment": "^2.29.1",
+    "peerjs": "^1.3.2",
     "react": "^17.0.2",
     "react-chat-elements": "^10.16.0",
     "react-cssfx-loading": "^1.0.3",
@@ -47,5 +50,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0",
+    "next-transpile-modules": "^9.0.0",
+    "react-app-rewired": "^2.1.11",
+    "wasm-loader": "^1.3.0"
   }
 }
